--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <div id="root"></div>
   </body>
   <script src="/bundle.js"></script>
-  <script src="/static/bundle.js"></script>
+  <script src="./bundle.js"></script>
 
 </html>
